Minor changes added layout css.
VER 0.1
Includes an unedited 404

--- a/index.html
+++ b/index.html
@@ -1,7 +1,100 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <!--<link rel="shortcut icon" type="image/x-icon" href="URL FOR ICON" />-->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>gomez-eric</title>
+  <meta name="description" content="demPeaches">
+
+<!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- http://fontawesome.io/icons/ -->
+<!-- STYLE SHEETS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<!-- MAIN CSS | STYLE -->
+    <link rel="stylesheet" href="styles/styles.css" rel="stylesheet"/>
+
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <!--<nav class="nav-bar text-center"> NAV BAR </nav>-->
+  <div class="jumbotron">
+    <h1 class="text-center">gomez-eric</h1>
+  </div>
+
+  <div class="mainContainer container container-fluid">
+
+
+    <div class="row projects">
+
+        <div class="col"> <!-- PROJECTS COL -->
+
+          <div class="row"> <!-- PROJECTS ROW -->
+            <div class="col projects_header">
+              <h5 class="text-center">.projects</h5>
+              <p class="text-center" style="font-style: italic; font-size: 12px">just a few projects that i've completed</p>
+            </div>
+          </div>
+
+          <div class="row"> <!-- ROW 1 -->
+
+            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_calc.png')"></a>
+            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_twitch.png')"></a>
+            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_quote.png')"></a>
+
+          </div>
+
+          <div class="row"> <!-- ROW 2 -->
+
+            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_wiki.png')"></a>
+            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_weather.png')"></a>
+
+          </div>
+
+          <div class="row"> <!-- ROW 2 -->
+
+          </div>
+
+        </div>
+    </div>
+
+
+    <div class="row contact">
+        <div class="col"> <!-- PROJECTS COL -->
+
+          <div class="row"> <!-- PROJECTS ROW -->
+            <div class="col contact_header">
+              <h5 class="text-center">.contact</h5>
+            </div>
+          </div>
+
+          <div class="row"> <!-- ROW 1 -->
+            <div class="col text-right contact_col">
+              ERIC GOMEZ</br>
+              <p class="text-right" style="font-style: italic; font-size: 12px">FRONT END DEVELOPER / STUDENT</p>
+              <p class="text-right" style="font-size: 12px">ABOUT ME:</p>
+              <p class="text-right" style="font-size: 12px"></p>
+              <a href="mailto:gomez123098@gmail.com">gomez123098@gmail.com</a></br>
+              <!-- mailto:gomez123098@gmail.com?subject=Email%20Subject&body=Email%20Body%20Text -->
+              <a class="col" target="_blank" href="https://github.com/gomez-eric"><i class="navButtons fa fa-github-square fa-3x"></i></a>
+            </div>
+          </div>
+
+        </div>
+    </div>
+
+  </div>
+
+<div onclick="topFunction()" id="scrollUP" class="btn" title="Go to top">TOP</div>
+
+<!-- SCRIPT -->
+<script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="scripts/script.js"></script>
+
+
 </body>
 </html>
