new changes to interface
more comp. with mobile devices;
changed background images;
added more js code to fix minor issues;

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
   <!--<link rel="shortcut icon" type="image/x-icon" href="URL FOR ICON" />-->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>gomez-eric</title>
@@ -16,7 +18,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 <!-- MAIN CSS | STYLE -->
-    <link rel="stylesheet" href="styles/styles.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/s-small.css" media="(max-width:600px)">
+    <link rel="stylesheet" href="styles/s-large.css" media="(min-width:601px)" >
 
 </head>
 
@@ -40,22 +44,67 @@
             </div>
           </div>
 
+
           <div class="row"> <!-- ROW 1 -->
 
-            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_calc.png')"></a>
-            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_twitch.png')"></a>
-            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_quote.png')"></a>
+            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            style="background-image:url('images/screen_calc.png')">
+              <div class="projects_col_inner">
+                <div class="projects_col_text">
+                  CALCULATOR
+                  <p class="text-center" style="font-style: italic; font-size: 12px">SIMPLE CALCULATOR THAT CALCULATES</p>
+                </div>
+
+              </div>
+            </div>
+
+            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            style="background-image:url('images/screen_twitch.png')">
+              <div class="projects_col_inner">
+                <div class="projects_col_text">
+                  TWITCHBOY
+                  <p class="text-center" style="font-style: italic; font-size: 12px">CHECK IF TWITCH STREAMERS ARE ONLINE</p>
+                </div>
+              </div>
+            </div>
 
           </div>
 
           <div class="row"> <!-- ROW 2 -->
 
-            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_wiki.png')"></a>
-            <a target="_blank" href="http://google.com" class="col-lg text-center projects_col" style="background-image:url('images/screen_weather.png')"></a>
+            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            style="background-image:url('images/screen_quote.png')">
+              <div class="projects_col_inner">
+                <div class="projects_col_text">
+                  QUOTE GENERATOR
+                  <p class="text-center" style="font-style: italic; font-size: 12px">GENERATES A RANDOME QUOTE</p>
+              </div>
+              </div>
+            </div>
+
+            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            style="background-image:url('images/screen_wiki.png')">
+              <div class="projects_col_inner">
+                <div class="projects_col_text">
+                  WIKISEARCH
+                  <p class="text-center" style="font-style: italic; font-size: 12px">SEARCH WIKIPEDIA</p>
+                </div>
+              </div>
+            </div>
 
           </div>
 
           <div class="row"> <!-- ROW 2 -->
+
+            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            style="background-image:url('images/screen_weather.png')">
+              <div class="projects_col_inner">
+                <div class="projects_col_text">
+                  WEATHER
+                  <p class="text-center" style="font-style: italic; font-size: 12px">CHECK YOUR LOCAL WEATHER</p>
+                </div>
+              </div>
+            </div>
 
           </div>
 
@@ -74,10 +123,10 @@
 
           <div class="row"> <!-- ROW 1 -->
             <div class="col text-right contact_col">
-              ERIC GOMEZ</br>
-              <p class="text-right" style="font-style: italic; font-size: 12px">FRONT END DEVELOPER / STUDENT</p>
-              <p class="text-right" style="font-size: 12px">ABOUT ME:</p>
-              <p class="text-right" style="font-size: 12px"></p>
+              <p class="text-right" style="font-size: 14px">ERIC GOMEZ</p>
+              <p class="text-right" style="font-style: italic; font-size: 12px">FRONT END DEVELOPING / STUDENT</p>
+              <p class="text-right" style="font-size: 10px"></p>
+              <p class="text-right" style="font-size: 10px"></p>
               <a href="mailto:gomez123098@gmail.com">gomez123098@gmail.com</a></br>
               <!-- mailto:gomez123098@gmail.com?subject=Email%20Subject&body=Email%20Body%20Text -->
               <a class="col" target="_blank" href="https://github.com/gomez-eric"><i class="navButtons fa fa-github-square fa-3x"></i></a>
