--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <!-- MAIN CSS | STYLE -->
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/s-small.css" media="(max-width:600px)">
-    <link rel="stylesheet" href="styles/s-large.css" media="(min-width:601px)" >
+    <link rel="stylesheet" href="styles/s-small.css" media="(max-width:971px)">
+    <link rel="stylesheet" href="styles/s-large.css" media="(min-width:970px)" >
 
 </head>
 
@@ -40,7 +40,6 @@
           <div class="row"> <!-- PROJECTS ROW -->
             <div class="col projects_header">
               <h5 class="text-center">.projects</h5>
-              <p class="text-center" style="font-style: italic; font-size: 12px">just a few projects that i've completed</p>
             </div>
           </div>
 
@@ -52,7 +51,7 @@
               <div class="projects_col_inner">
                 <div class="projects_col_text">
                   CALCULATOR
-                  <p class="text-center" style="font-style: italic; font-size: 12px">SIMPLE CALCULATOR THAT CALCULATES</p>
+                  <p class="text-center" style="font-style: italic; font-size: 12px">SIMPLE JS CALCULATOR</p>
                 </div>
 
               </div>
@@ -124,7 +123,7 @@
           <div class="row"> <!-- ROW 1 -->
             <div class="col text-right contact_col">
               <p class="text-right" style="font-size: 14px">ERIC GOMEZ</p>
-              <p class="text-right" style="font-style: italic; font-size: 12px">FRONT END DEVELOPING / STUDENT</p>
+              <p class="text-right" style="font-style: italic; font-size: 12px">CS STUDENT / FRONT END DEVELOPMENT</p>
               <p class="text-right" style="font-size: 10px"></p>
               <p class="text-right" style="font-size: 10px"></p>
               <a href="mailto:gomez123098@gmail.com">gomez123098@gmail.com</a></br>
