--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <!--<link rel="shortcut icon" type="image/x-icon" href="URL FOR ICON" />-->
+  <link rel="shortcut icon" type="image/x-icon" href="eg.png" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -46,7 +46,7 @@
 
           <div class="row"> <!-- ROW 1 -->
 
-            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            <div target="_blank" href="https://gomez-eric.github.io/Calculator/" class="col-lg projects_col"
             style="background-image:url('images/screen_calc.png')">
               <div class="projects_col_inner">
                 <div class="projects_col_text">
@@ -57,7 +57,7 @@
               </div>
             </div>
 
-            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            <div target="_blank" href="https://gomez-eric.github.io/TwitchBoy/" class="col-lg projects_col"
             style="background-image:url('images/screen_twitch.png')">
               <div class="projects_col_inner">
                 <div class="projects_col_text">
@@ -71,7 +71,7 @@
 
           <div class="row"> <!-- ROW 2 -->
 
-            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            <div target="_blank" href="https://gomez-eric.github.io/RandomQuote/" class="col-lg projects_col"
             style="background-image:url('images/screen_quote.png')">
               <div class="projects_col_inner">
                 <div class="projects_col_text">
@@ -81,7 +81,7 @@
               </div>
             </div>
 
-            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            <div target="_blank" href="https://gomez-eric.github.io/WikiSearch/" class="col-lg projects_col"
             style="background-image:url('images/screen_wiki.png')">
               <div class="projects_col_inner">
                 <div class="projects_col_text">
@@ -95,7 +95,7 @@
 
           <div class="row"> <!-- ROW 2 -->
 
-            <div target="_blank" href="http://google.com" class="col-lg projects_col"
+            <div target="_blank" href="https://gomez-eric.github.io/LocalWeather/" class="col-lg projects_col"
             style="background-image:url('images/screen_weather.png')">
               <div class="projects_col_inner">
                 <div class="projects_col_text">
