--- a/404.html
+++ b/404.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>404</h1>
-<p>:(</p>
-</body>
+  <head>
+    <link rel="stylesheet" href="styles/styles.css">
+  </head>
+
+  <body style="background-color: rgb(66, 244, 167)">
+    <div class="main_container404">
+      <a style="font-size: 50px;" href="https://gomez-eric.github.io/"> <strong> HOME </strong> </a>
+      <h1>404</h1>
+      <h2>404</h2>
+      <h3>404</h3>
+      <h4>404</h4>
+      <h5>404</h5>
+      <h6>404</h6>
+
+    </div>
+
+
+  </body>
+
+
 </html>
