--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
   <title>gomez-eric</title>
   <meta name="description" content="demPeaches">
 
-<!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- http://fontawesome.io/icons/ -->
-<!-- STYLE SHEETS -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"> <!-- http://konpa.github.io/devicon/ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<!-- MAIN CSS | STYLE -->
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/s-small.css" media="(max-width:971px)">
     <link rel="stylesheet" href="styles/s-large.css" media="(min-width:970px)" >
@@ -30,117 +28,58 @@
     <h1 class="text-center">gomez-eric</h1>
   </div>
 
-  <div class="mainContainer container container-fluid">
+  <div class="main_container"> <!-- MAIN CONTAINER START-->
 
-
-    <div class="row projects">
-
-        <div class="col"> <!-- PROJECTS COL -->
-
-          <div class="row"> <!-- PROJECTS ROW -->
-            <div class="col projects_header">
-              <h5 class="text-center">.projects</h5>
-            </div>
-          </div>
-
-
-          <div class="row"> <!-- ROW 1 -->
-
-            <div target="_blank" href="https://gomez-eric.github.io/Calculator/" class="col-lg projects_col"
-            style="background-image:url('images/screen_calc.png')">
-              <div class="projects_col_inner">
-                <div class="projects_col_text">
-                  CALCULATOR
-                  <p class="text-center" style="font-style: italic; font-size: 12px">SIMPLE JS CALCULATOR</p>
-                </div>
-
-              </div>
-            </div>
-
-            <div target="_blank" href="https://gomez-eric.github.io/TwitchBoy/" class="col-lg projects_col"
-            style="background-image:url('images/screen_twitch.png')">
-              <div class="projects_col_inner">
-                <div class="projects_col_text">
-                  TWITCHBOY
-                  <p class="text-center" style="font-style: italic; font-size: 12px">CHECK IF TWITCH STREAMERS ARE ONLINE</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="row"> <!-- ROW 2 -->
-
-            <div target="_blank" href="https://gomez-eric.github.io/RandomQuote/" class="col-lg projects_col"
-            style="background-image:url('images/screen_quote.png')">
-              <div class="projects_col_inner">
-                <div class="projects_col_text">
-                  QUOTE GENERATOR
-                  <p class="text-center" style="font-style: italic; font-size: 12px">GENERATES A RANDOME QUOTE</p>
-              </div>
-              </div>
-            </div>
-
-            <div target="_blank" href="https://gomez-eric.github.io/WikiSearch/" class="col-lg projects_col"
-            style="background-image:url('images/screen_wiki.png')">
-              <div class="projects_col_inner">
-                <div class="projects_col_text">
-                  WIKISEARCH
-                  <p class="text-center" style="font-style: italic; font-size: 12px">SEARCH WIKIPEDIA</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="row"> <!-- ROW 2 -->
-
-            <div target="_blank" href="https://gomez-eric.github.io/LocalWeather/" class="col-lg projects_col"
-            style="background-image:url('images/screen_weather.png')">
-              <div class="projects_col_inner">
-                <div class="projects_col_text">
-                  WEATHER
-                  <p class="text-center" style="font-style: italic; font-size: 12px">CHECK YOUR LOCAL WEATHER</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
+    <div class="contact_header">
+      <h5 class="text-center">.about_me</h5>
     </div>
 
+    <div class="about">
 
-    <div class="row contact">
-        <div class="col"> <!-- PROJECTS COL -->
+      <div class="tools text-left">
+        <h5 class="text-center">.fav_tools</h5>
+        <i class="devicon-bootstrap-plain-wordmark colored"></i>
+        <i class="devicon-atom-original-wordmark colored"></i>
+        <i class="devicon-visualstudio-plain-wordmark"></i>
+        <i class="devicon-python-plain-wordmark colored"></i>
+        <i class="devicon-photoshop-line colored"></i>
+        <i class="devicon-nodejs-plain-wordmark colored"></i>
+        <i class="devicon-jquery-plain-wordmark colored"></i>
+        <i class="devicon-javascript-plain colored"></i>
+        <i class="devicon-java-plain-wordmark colored"></i>
+        <i class="devicon-html5-plain-wordmark colored"></i>
+        <i class="devicon-github-plain-wordmark colored"></i>
+        <i class="devicon-git-plain-wordmark colored"></i>
+        <i class="devicon-gimp-plain colored"></i>
+        <i class="devicon-express-original-wordmark colored"></i>
+        <i class="devicon-csharp-line-wordmark colored"></i>
+      </div>
 
-          <div class="row"> <!-- PROJECTS ROW -->
-            <div class="col contact_header">
-              <h5 class="text-center">.contact</h5>
-            </div>
-          </div>
+      <div class="contact text-left">
+        <div style="font-size: 14px">ERIC GOMEZ</div>
+        <div style="font-style: italic; font-size: 12px">CS STUDENT / FULL STACK / SOFTWARE ENGINEER</div>
+        <a style="font-style: italic; font-size: 12px" href="mailto:gomez123098@gmail.com">gomez123098@gmail.com</a></br>
+      </div>
 
-          <div class="row"> <!-- ROW 1 -->
-            <div class="col text-right contact_col">
-              <p class="text-right" style="font-size: 14px">ERIC GOMEZ</p>
-              <p class="text-right" style="font-style: italic; font-size: 12px">CS STUDENT / FRONT END DEVELOPMENT</p>
-              <p class="text-right" style="font-size: 10px"></p>
-              <p class="text-right" style="font-size: 10px"></p>
-              <a href="mailto:gomez123098@gmail.com">gomez123098@gmail.com</a></br>
-              <!-- mailto:gomez123098@gmail.com?subject=Email%20Subject&body=Email%20Body%20Text -->
-              <a class="col" target="_blank" href="https://github.com/gomez-eric"><i class="navButtons fa fa-github-square fa-3x"></i></a>
-            </div>
-          </div>
 
-        </div>
+
     </div>
 
-  </div>
+    <div class="projects_header">
+      <h5 class="text-center">.projects</h5>
+    </div>
+
+    <div class="projects"></div>
 
 <div onclick="topFunction()" id="scrollUP" class="btn" title="Go to top">TOP</div>
 
+</div> <!--MAIN CONTAINER END-->
+
+
+
 <!-- SCRIPT -->
 <script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="assets/projects.js"></script>-
 <script src="scripts/script.js"></script>
 
 
