--- a/404.html
+++ b/404.html
@@ -2,22 +2,40 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles/styles.css">
+    
   </head>
 
   <body style="background-color: rgb(66, 244, 167)">
-    <div class="main_container404">
-      <a style="font-size: 50px;" href="https://gomez-eric.github.io/"> <strong> HOME </strong> </a>
-      <h1>404</h1>
-      <h2>404</h2>
-      <h3>404</h3>
-      <h4>404</h4>
-      <h5>404</h5>
-      <h6>404</h6>
-
+    <div class="main_container_404">
+      <a style="font-size: 50px" href="https://gomez-eric.github.io/"> <strong> HOME </strong> </a>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
+      <div class="four">404</div>
     </div>
-
-
   </body>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="scripts/404.js"></script>
 
 </html>
