--- a/index.html
+++ b/index.html
@@ -1,87 +1,44 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="eg.png" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>gomez-eric</title>
-  <meta name="description" content="demPeaches">
-
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- http://fontawesome.io/icons/ -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"> <!-- http://konpa.github.io/devicon/ -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/s-small.css" media="(max-width:971px)">
-    <link rel="stylesheet" href="styles/s-large.css" media="(min-width:970px)" >
-
+  <meta name="description" content="">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400" rel="stylesheet">
+  <!-- https://fontawesome.com/start -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- http://konpa.github.io/devicon/ -->
+  <link rel="stylesheet"
+    href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/s-small.css" media="(max-width:971px)">
+  <link rel="stylesheet" href="styles/s-large.css" media="(min-width:970px)">
 </head>
 
 <body>
-  <!--<nav class="nav-bar text-center"> NAV BAR </nav>-->
-  <div class="jumbotron">
-    <h1 class="text-center">gomez-eric</h1>
-  </div>
-
-  <div class="main_container"> <!-- MAIN CONTAINER START-->
-
-    <div class="contact_header">
-      <h5 class="text-center">.about_me</h5>
-    </div>
-
+  <div class="jumbotron">gomez-eric</div>
+  <div class="main_container">
+    <div class="_header">.about_me</div>
     <div class="about">
-
-      <div class="tools text-left">
-        <h5 class="text-center">.fav_tools</h5>
-        <i class="devicon-bootstrap-plain-wordmark colored"></i>
-        <i class="devicon-atom-original-wordmark colored"></i>
-        <i class="devicon-visualstudio-plain-wordmark"></i>
-        <i class="devicon-python-plain-wordmark colored"></i>
-        <i class="devicon-photoshop-line colored"></i>
-        <i class="devicon-nodejs-plain-wordmark colored"></i>
-        <i class="devicon-jquery-plain-wordmark colored"></i>
-        <i class="devicon-javascript-plain colored"></i>
-        <i class="devicon-java-plain-wordmark colored"></i>
-        <i class="devicon-html5-plain-wordmark colored"></i>
-        <i class="devicon-github-plain-wordmark colored"></i>
-        <i class="devicon-git-plain-wordmark colored"></i>
-        <i class="devicon-gimp-plain colored"></i>
-        <i class="devicon-express-original-wordmark colored"></i>
-        <i class="devicon-csharp-line-wordmark colored"></i>
+      <div style="font-size: 14px">
+        <!-- ABOUT ME HERE -->
       </div>
-
-      <div class="contact text-left">
-        <div style="font-size: 14px">ERIC GOMEZ</div>
-        <div style="font-style: italic; font-size: 12px">CS STUDENT / FULL STACK / SOFTWARE ENGINEER</div>
-        <a style="font-style: italic; font-size: 12px" href="mailto:gomez123098@gmail.com">gomez123098@gmail.com</a></br>
-      </div>
-
-
-
+      <div style="font-size: 16px">ERIC GOMEZ</div>
+      <a style="font-style: italic; font-size: 14px" href="mailto:gomez123098@gmail.com">gomez123098@gmail.com</a>
     </div>
-
-    <div class="projects_header">
-      <h5 class="text-center">.projects</h5>
-    </div>
-
+    <div class="_header">.projects</div>
     <div class="projects"></div>
-
-<div onclick="topFunction()" id="scrollUP" class="btn" title="Go to top">TOP</div>
-
-</div> <!--MAIN CONTAINER END-->
-
-
-
-<!-- SCRIPT -->
-<script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="assets/projects.js"></script>-
-<script src="scripts/script.js"></script>
-
-
+  </div>
+  <div onclick="topFunction()" id="scroll_to_top" class="btn" title="Go to top"><i class="fas fa-caret-up"></i></div>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="assets/projects.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
+
 </html>
