fixing css and 404

--- a/404.html
+++ b/404.html
@@ -5,34 +5,9 @@
     
   </head>
 
-  <body style="background-color: rgb(66, 244, 167)">
-    <div class="main_container_404">
-      <a style="font-size: 50px" href="https://gomez-eric.github.io/"> <strong> HOME </strong> </a>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-      <div class="four">404</div>
-    </div>
+  <body class="body404">
+    <a class="home_404" style="font-size: 10px" href="https://gomez-eric.github.io/"> <strong> HOME </strong> </a>
+    <div class="_404"></div>
   </body>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
