--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <div class="jumbotron">gomez-eric</div>
+  <div class="jumbotron">gomez eric</div>
   <div class="main_container">
     <div class="_header">.about_me</div>
     <div class="about">
