--- a/404.html
+++ b/404.html
@@ -5,12 +5,20 @@
     
   </head>
 
-  <body class="body404">
-    <a class="home_404" style="font-size: 10px" href="https://gomez-eric.github.io/"> <strong> HOME </strong> </a>
-    <div class="_404"></div>
+  <body class="">
+    
+    <div class=""></div>
   </body>
 
+  <div class="section section-container" id="about">
+    <div class="text">
+      <h1><a class="" style="font-size: 10px; color:black;" href="https://gomez-eric.github.io/"> <strong> HOME </strong> </a></h1>
+      <div class="split" style="text-transform:uppercase;"></div>
+        <p>4 0 4</p>
+      <div class="split"></div>
+    </div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="scripts/404.js"></script>
 
 </html>
