css nav changed

--- a/index.html
+++ b/index.html
@@ -18,22 +18,28 @@
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/s-small.css" media="(max-width:971px)">
   <link rel="stylesheet" href="styles/s-large.css" media="(min-width:970px)">
-  
+
 </head>
 
 
 <body>
 
   <nav class="nav">
-    <div class="nav-bg"></div>
-    <div class="navbtn-container">
-      <a href="#home">HOME</a>
-      <a href="#about">ABOUT</a>
-      <a href="#skills">SKILLS</a>
-      <a href="#projects">PROJECTS</a>
-      <a href="#contact">CONTACT</a>
+    <div class="nav-container">
+      <div class="nav-bg"></div>
+      <div class="navbtn-container">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#skills">SKILLS</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
+      </div>
     </div>
+    
     <div onclick="navswitch()" class="navbtn" title="NAVIGATION SWITCH"><i class="fas fa-ellipsis-h"></i></div>
+
+
+
   </nav>
 
   <div class="jumbotron section" id="home">
@@ -54,11 +60,11 @@
         <div class="text">
           <h1>ABOUT ME</h1>
           <div class="split" style="text-transform:uppercase;"></div>
-            <p>I have an obsessive attention to detail</p>
-            <p>Love making things happen</p>
-            <p>Mission-driven work ethic</p>
-            <p>Learning new things everyday</p>
-            <p>Creating beauitiful, responsive and accessible layouts from scratch</p>
+          <p>I have an obsessive attention to detail</p>
+          <p>Love making things happen</p>
+          <p>Mission-driven work ethic</p>
+          <p>Learning new things everyday</p>
+          <p>Creating beauitiful, responsive and accessible layouts from scratch</p>
           <div class="split"></div>
         </div>
       </div>
@@ -72,7 +78,8 @@
           <h3>LANGUAGES, LIBRARIES & FRAMEWORKS</h3>
           <p>JS ES6, Python, Java, C#, C++, jQuery, Express.js, Bootstrap, HTML5 & CSS</p>
           <h3>TOOLS</h3>
-          <p>Visual Studio Code, Adobe XD, Node.js, Inkscape, NPM, Visual Studio 2017, GidtHub, Git, MSOffice, AMPPS, Terminal</p>
+          <p>Visual Studio Code, Adobe XD, Node.js, Inkscape, NPM, Visual Studio 2017, GidtHub, Git, MSOffice, AMPPS,
+            Terminal</p>
           <div class="split"></div>
         </div>
       </div>
@@ -151,7 +158,7 @@
         <div class="parallex"></div>
         <div class="overlay"></div>
         <div class="footer-text" style="text-align: center">
-          <h1 >LETS WORK TOGETHER</h1>
+          <h1>LETS WORK TOGETHER</h1>
           <div class="split"></div>
           <div style="padding-bottom: 20px;"> SEND ME AN EMAIL</div>
           <div style="font-size: 16px">
