--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <p>Love making things happen</p>
           <p>Mission-driven work ethic</p>
           <p>Learning new things everyday</p>
-          <p>Creating beauitiful, responsive and accessible layouts from scratch</p>
+          <p>Creating beautiful, responsive and accessible layouts from scratch</p>
           <div class="split"></div>
         </div>
       </div>
