--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h3>LANGUAGES, LIBRARIES & FRAMEWORKS</h3>
           <p>JS ES6, Python, Java, C#, C++, jQuery, Express.js, Bootstrap, HTML5 & CSS</p>
           <h3>TOOLS</h3>
-          <p>Visual Studio Code, Adobe XD, Node.js, Inkscape, NPM, Visual Studio 2017, GidtHub, Git, MSOffice, AMPPS,
+          <p>Visual Studio Code, Adobe XD, Node.js, Inkscape, NPM, Visual Studio 2017, GitHub, Git, MSOffice, AMPPS,
             Terminal</p>
           <div class="split"></div>
         </div>
